Some more enemies
Gradle application